--- a/research/index.html
+++ b/research/index.html
@@ -96,7 +96,7 @@
 		<p>
 			<strong>Notions of arbitrariness</strong><br>
 			<em>Mind &amp; Language</em><br>
-			first author, w/ <a href="https://pierafilip.wixsite.com/pierafilippi" target="_blank" rel="noopener">Piera Filippi</a> et al.<br>
+			w/ <a href="https://pierafilip.wixsite.com/pierafilippi" target="_blank" rel="noopener">Piera Filippi</a> et al.<br>
 			<a data-bs-toggle="collapse" href=#mila3 aria-expanded="false" role="button" aria-controls=mon1>abstract</a> |
 			AAM under embargo |
 			<a href="https://doi.org/10.1111/mila.12443" target="_blank" rel="noopener">doi</a>
@@ -114,7 +114,7 @@
 		<p>
 			<strong>Optionality in animal communication</strong><br>
 			<em>Biological Reviews</em><br>
-			co-first author, w/ <a href="https://stuartkwatson.wordpress.com/" target="_blank" rel="noopener">Stuart K. Watson</a> et al.<br>
+			w/ <a href="https://stuartkwatson.wordpress.com/" target="_blank" rel="noopener">Stuart K. Watson</a> et al.<br>
 			<a data-bs-toggle="collapse" href=#bire1 aria-expanded="false" role="button" aria-controls=mon1>abstract</a> |
 			<a href="https://lcgasparri.github.io/papers/bire1.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1111/brv.12882" target="_blank" rel="noopener">doi</a>
@@ -208,7 +208,7 @@
 		<p>
 			<strong>Hearing meanings: the revenge of context</strong><br>
 			<em>Synthese</em><br>
-			co-first author, w/ <a href=https://caphi.univ-nantes.fr/_Michael-Murez_ target="_blank" rel="noopener">Michael Murez</a><br>
+			w/ <a href=https://caphi.univ-nantes.fr/_Michael-Murez_ target="_blank" rel="noopener">Michael Murez</a><br>
 			<a data-bs-toggle="collapse" href=#synt1 aria-expanded="false" role="button" aria-controls=synt1>abstract</a> |
 			<a href="https://lcgasparri.github.io/papers/synt1.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1007/s11229-019-02398-0" target="_blank" rel="noopener">doi</a>
@@ -320,7 +320,7 @@
 		<p>
 			<strong>Word meaning</strong><br>
 			<em>Stanford Encyclopedia of Philosophy</em><br>
-			co-first author, w/ <a href=https://unito.academia.edu/DiegoMarconi target="_blank" rel="noopener">Diego Marconi</a><br>
+			w/ <a href=https://unito.academia.edu/DiegoMarconi target="_blank" rel="noopener">Diego Marconi</a><br>
 			<a data-bs-toggle="collapse" href=#sep1 aria-expanded="false" role="button" aria-controls=sep1>abstract</a> |
 			<a href="https://plato.stanford.edu/entries/word-meaning/" target="_blank" rel="noopener">link</a>
 		</p>
