--- a/research/index.html
+++ b/research/index.html
@@ -60,11 +60,11 @@
 		<p>
 			<strong>Inherent and probabilistic naturalness</strong><br>
 			<em>Philosophical Studies</em><br>
-			<a data-bs-toggle="collapse" href=#phst1 aria-expanded="false" role="button" aria-controls=synt3>abstract</a> |
-			<a href="https://lcgasparri.github.io/papers/phst1.pdf" target="_blank" rel="noopener">local</a> |
+			<a data-bs-toggle="collapse" href=#InhProNat aria-expanded="false" role="button" aria-controls=InhProNat>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/InhProNat.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1007/s11098-023-02070-x" target="_blank" rel="noopener">doi</a>
 		</p>
-		<div id=phst1 class=collapse>
+		<div id=InhProNat class=collapse>
 			<p class="font-monospace small">
 				Standard accounts hold that regularities of behavior must be arbitrary to constitute a convention.
 				Yet, there is growing consensus that conventionality is a graded phenomenon, and that conventions can be more or less natural.
@@ -78,11 +78,11 @@
 		<p>
 			<strong>The first words ever spoken</strong><br>
 			<em>Synthese</em><br>
-			<a data-bs-toggle="collapse" href=#synt3 aria-expanded="false" role="button" aria-controls=synt3>abstract</a> |
-			<a href="https://lcgasparri.github.io/papers/synt3.pdf" target="_blank" rel="noopener">local</a> |
+			<a data-bs-toggle="collapse" href=#FirWorSpo aria-expanded="false" role="button" aria-controls=FirWorSpo>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/FirWorSpo.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1007/s11229-023-04166-7" target="_blank" rel="noopener">doi</a>
 		</p>
-		<div id=synt3 class=collapse>
+		<div id=FirWorSpo class=collapse>
 			<p class="font-monospace small">
 				I argue that ontologies of words should engage with the emergence of lexical communication in the deep history of our line.
 				It may seem that the evolutionary origins of words are orthogonal to the analytical project of establishing the defining features of wordhood, and that an adequate ontology of words requires nothing more than an observation of the properties of modern languages.
@@ -97,7 +97,7 @@
 			<strong>Notions of arbitrariness</strong><br>
 			<em>Mind &amp; Language</em><br>
 			w/ <a href="https://pierafilip.wixsite.com/pierafilippi" target="_blank" rel="noopener">Piera Filippi</a> et al.<br>
-			<a data-bs-toggle="collapse" href=#mila3 aria-expanded="false" role="button" aria-controls=mon1>abstract</a> |
+			<a data-bs-toggle="collapse" href=#mila3 aria-expanded="false" role="button" aria-controls=mila3>abstract</a> |
 			AAM under embargo |
 			<a href="https://doi.org/10.1111/mila.12443" target="_blank" rel="noopener">doi</a>
 		</p>
@@ -115,11 +115,11 @@
 			<strong>Optionality in animal communication</strong><br>
 			<em>Biological Reviews</em><br>
 			w/ <a href="https://stuartkwatson.wordpress.com/" target="_blank" rel="noopener">Stuart K. Watson</a> et al.<br>
-			<a data-bs-toggle="collapse" href=#bire1 aria-expanded="false" role="button" aria-controls=mon1>abstract</a> |
-			<a href="https://lcgasparri.github.io/papers/bire1.pdf" target="_blank" rel="noopener">local</a> |
+			<a data-bs-toggle="collapse" href=#OptAniCom aria-expanded="false" role="button" aria-controls=OptAniCom>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/OptAniCom.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1111/brv.12882" target="_blank" rel="noopener">doi</a>
 		</p>
-		<div id=bire1 class=collapse>
+		<div id=OptAniCom class=collapse>
 			<p class="font-monospace small">
 				A critical feature of language is that the form of words need not bear any perceptual similarity to their function - these relationships can be &ldquo;arbitrary&rdquo;.
 				The capacity to process these arbitrary form-function associations facilitates the enormous expressive power of language.
@@ -136,11 +136,11 @@
 		<p>
 			<strong>&#346;a&#7749;karan monism and the limits of thought</strong><br>
 			<em>The Monist</em><br>
-			<a data-bs-toggle="collapse" href=#mon1 aria-expanded="false" role="button" aria-controls=mon1>abstract</a> |
-			<a href="https://lcgasparri.github.io/papers/mon1.pdf" target="_blank" rel="noopener">local</a> |
+			<a data-bs-toggle="collapse" href=#SanMonTho aria-expanded="false" role="button" aria-controls=SanMonTho>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/SanMonTho.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1093/monist/onab024" target="_blank" rel="noopener">doi</a>
 		</p>
-		<div id=mon1 class=collapse>
+		<div id=SanMonTho class=collapse>
 			<p class="font-monospace small">
 				A growing movement in contemporary philosophy of mind is looking back on Indian thought to gain new insights into the problem of consciousness.
 				This paper weighs the prospects of thinking about mentality through the lenses of &#346;a&#7749;karan Advaita Ved&amacr;nta.
@@ -153,11 +153,11 @@
 		<p>
 			<strong>Proportional dispositional predicates</strong><br>
 			<em>Synthese</em><br>
-			<a data-bs-toggle="collapse" href=#synt2 aria-expanded="false" role="button" aria-controls=synt2>abstract</a> |
-			<a href="https://lcgasparri.github.io/papers/synt2.pdf" target="_blank" rel="noopener">local</a> |
+			<a data-bs-toggle="collapse" href=#ProDisPre aria-expanded="false" role="button" aria-controls=ProDisPre>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/ProDisPre.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1007/s11229-021-03336-9" target="_blank" rel="noopener">doi</a>
 		</p>
-		<div id=synt2 class=collapse>
+		<div id=ProDisPre class=collapse>
 			<p class="font-monospace small">
 				Ordinary disposition ascriptions (DAs) appear to form a semantically heterogeneous class of clauses some of which can be straightforwardly analyzed as possibility claims, and some of which resist a simple quantificational treatment.
 				For example, while “The block is breakable” is true if the block breaks at a relevant possible world, for “The block is fragile” to be true it doesn’t suffice that the block breaks at one of the worlds that matter to the evaluation of the ascription, since the block could break accidentally and yet be sturdy.
@@ -170,11 +170,11 @@
 		<p>
 			<strong>Lexical innovation and the periphery of language</strong><br>
 			<em>Linguistics and Philosophy</em><br>
-			<a data-bs-toggle="collapse" href=#lp1 aria-expanded="false" role="button" aria-controls=lp1>abstract</a> |
-			<a href="https://lcgasparri.github.io/papers/lp1.pdf" target="_blank" rel="noopener">local</a> |
+			<a data-bs-toggle="collapse" href=#LexInnPer aria-expanded="false" role="button" aria-controls=LexInnPer>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/LexInnPer.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1007/s10988-020-09319-2" target="_blank" rel="noopener">doi</a>
 		</p>
-		<div id=lp1 class=collapse>
+		<div id=LexInnPer class=collapse>
 			<p class="font-monospace small">
 				Lexical innovations (e.g., zero-derivations coined on the fly by a speaker) seem to bear semantic content.
 				Yet, such expressions cannot bear semantic content as a function of the conventions of meaning in force in the language, since they are not part of its lexicon.
@@ -190,11 +190,11 @@
 		<p>
 			<strong>Semantic supervenience</strong><br>
 			<em>Inquiry</em><br>
-			<a data-bs-toggle="collapse" href=#inq1 aria-expanded="false" role="button" aria-controls=inq1>abstract</a> |
-			<a href="https://lcgasparri.github.io/papers/inq1.pdf" target="_blank" rel="noopener">local</a> |
+			<a data-bs-toggle="collapse" href=#SemSup aria-expanded="false" role="button" aria-controls=SemSup>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/SemSup.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1080/0020174X.2021.1930579" target="_blank" rel="noopener">doi</a>
 		</p>
-		<div id=inq1 class=collapse>
+		<div id=SemSup class=collapse>
 			<p class="font-monospace small">
 				It is common belief that semantic properties supervene on non-semantic properties: no two possible worlds can be non-semantic duplicates and fail to be semantic duplicates.
 				The view enjoys somewhat of an orthodoxy status in contemporary philosophy of language and metaphysics, and is often assumed without argument.
@@ -209,11 +209,11 @@
 			<strong>Hearing meanings: the revenge of context</strong><br>
 			<em>Synthese</em><br>
 			w/ <a href=https://caphi.univ-nantes.fr/_Michael-Murez_ target="_blank" rel="noopener">Michael Murez</a><br>
-			<a data-bs-toggle="collapse" href=#synt1 aria-expanded="false" role="button" aria-controls=synt1>abstract</a> |
-			<a href="https://lcgasparri.github.io/papers/synt1.pdf" target="_blank" rel="noopener">local</a> |
+			<a data-bs-toggle="collapse" href=#HeaMeaRev aria-expanded="false" role="button" aria-controls=HeaMeaRev>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/HeaMeaRev.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1007/s11229-019-02398-0" target="_blank" rel="noopener">doi</a>
 		</p>
-		<div id=synt1 class=collapse>
+		<div id=HeaMeaRev class=collapse>
 			<p class="font-monospace small">
 				According to the perceptual view of language comprehension, listeners typically recover high-level linguistic properties such as utterance meaning without inferential work.
 				The perceptual view is subject to the Objection from Context: since utterance meaning is massively context-sensitive, and context-sensitivity requires cognitive inference, the perceptual view is false.
@@ -226,11 +226,11 @@
 		<p>
 			<strong>A pluralistic theory of wordhood</strong><br>
 			<em>Mind &amp; Language</em><br>
-			<a data-bs-toggle="collapse" href=#mila2 aria-expanded="false" role="button" aria-controls=mila2>abstract</a> |
-			<a href="https://lcgasparri.github.io/papers/mila2.pdf" target="_blank" rel="noopener">local</a> |
+			<a data-bs-toggle="collapse" href=#PluTheWor aria-expanded="false" role="button" aria-controls=PluTheWor>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/PluTheWor.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1111/mila.12297" target="_blank" rel="noopener">doi</a>
 		</p>
-		<div id=mila2 class=collapse>
+		<div id=PluTheWor class=collapse>
 			<p class="font-monospace small">
 				What are words and how should we individuate them? There are two main answers on the philosophical market. For some, words are bundles of structural-functional features defining a unique performance profile.
 				For others, words are noneternal continuants individuated by their causal-historical ancestry. These conceptions offer competing views of the nature of words, and it seems natural to assume that at most one of them can capture the essence of wordhood.
@@ -241,11 +241,11 @@
 		<p>
 			<strong>A numeral oddity</strong><br>
 			<em>Journal of Semantics</em><br>
-			<a data-bs-toggle="collapse" href=#jos1 aria-expanded="false" role="button" aria-controls=jos1>abstract</a> |
-			<a href="https://lcgasparri.github.io/papers/jos1.pdf" target="_blank" rel="noopener">local</a> |
+			<a data-bs-toggle="collapse" href=#NumOdd aria-expanded="false" role="button" aria-controls=NumOdd>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/NumOdd.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1093/jos/ffz006" target="_blank" rel="noopener">doi</a>
 		</p>
-		<div id=jos1 class=collapse>
+		<div id=NumOdd class=collapse>
 			<p class="font-monospace small">
 				Natural language appears to allow the ascription of properties of numeral symbols to the denotation of number referring phrases.
 				The paper describes the phenomenon and presents two alternative explanations for why it obtains. One combining an intuitive semantics for number referring phrases and a predicate-shifting mechanism,
@@ -257,11 +257,11 @@
 		<p>
 			<strong>Pronominal anaphora, coreference, and closed quotation marks</strong><br>
 			<em>Mind &amp; Language</em><br>
-			<a data-bs-toggle="collapse" href=#mila1 aria-expanded="false" role="button" aria-controls=mila1>abstract</a> |
-			<a href="https://lcgasparri.github.io/papers/mila1.pdf" target="_blank" rel="noopener">local</a> |
+			<a data-bs-toggle="collapse" href=#AnaCorQuo aria-expanded="false" role="button" aria-controls=AnaCorQuo>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/AnaCorQuo.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1111/mila.12213" target="_blank" rel="noopener">doi</a>
 		</p>
-		<div id=mila1 class=collapse>
+		<div id=AnaCorQuo class=collapse>
 			<p class="font-monospace small">
 				Consider the following sentence: &ldquo;Mary meditated on the sentence &lsquo;Bill is a good friend&rsquo; and concluded that he was a good friend&rdquo;. It is standardly assumed that in sentences of this sort, containing so‐called &ldquo;closed&rdquo; quotations,
 				the expressions occurring between quotation marks are mentioned and do not take their ordinary referents. The quoted NP &ldquo;Bill&rdquo; refers, if anything, to the name &lsquo;Bill&rsquo;, not to the individual Bill. At the same time, the pronoun &ldquo;he&rdquo;,
@@ -273,11 +273,11 @@
 		<p>
 			<strong>Phonetic segments and the organization of speech</strong><br>
 			<em>Philosophy of Science</em><br>
-			<a data-bs-toggle="collapse" href=#phos1 aria-expanded="false" role="button" aria-controls=phos1>abstract</a> |
-			<a href="https://lcgasparri.github.io/papers/phos1.pdf" target="_blank" rel="noopener">local</a> |
+			<a data-bs-toggle="collapse" href=#PhoSegSpe aria-expanded="false" role="button" aria-controls=PhoSegSpe>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/PhoSegSpe.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1086/701955" target="_blank" rel="noopener">doi</a>
 		</p>
-		<div id=phos1 class=collapse>
+		<div id=PhoSegSpe class=collapse>
 			<p class="font-monospace small">
 				According to mainstream linguistic phonetics, speech can be modeled as a string of discrete sound segments or &ldquo;phones&rdquo; drawn from a universal phonetic inventory.
 				Recent work has argued that a mature phonetics should refrain from theorizing about speech and speech processing using sound segments, and that the phone concept should be eliminated from linguistic theory.
@@ -289,11 +289,11 @@
 		<p>
 			<strong>Priority cosmopsychism and the Advaita Ved&amacr;nta</strong><br>
 			<em>Philosophy East and West</em><br>
-			<a data-bs-toggle="collapse" href=#pew1 aria-expanded="false" role="button" aria-controls=pew1>abstract</a> |
-			<a href="https://lcgasparri.github.io/papers/pew1.pdf" target="_blank" rel="noopener">local</a> |
+			<a data-bs-toggle="collapse" href=#CosAdvVed aria-expanded="false" role="button" aria-controls=CosAdvVed>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/CosAdvVed.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1353/pew.2019.0002" target="_blank" rel="noopener">doi</a>
 		</p>
-		<div id=pew1 class=collapse>
+		<div id=CosAdvVed class=collapse>
 			<p class="font-monospace small">
 				The combination of panpsychism and priority monism leads to priority cosmopsychism, the view that the consciousness of individual sentient creatures is derivative of an underlying cosmic consciousness.
 				It has been suggested that contemporary priority cosmopsychism parallels central ideas in the Advaita Ved&amacr;nta tradition. The paper offers a critical evaluation of this claim.
@@ -305,11 +305,11 @@
 		<p>
 			<strong>Originalism about word types</strong><br>
 			<em>Thought</em><br>
-			<a data-bs-toggle="collapse" href=#tht1 aria-expanded="false" role="button" aria-controls=tht1>abstract</a> |
-			<a href="https://lcgasparri.github.io/papers/tht1.pdf" target="_blank" rel="noopener">local</a> |
+			<a data-bs-toggle="collapse" href=#OriWorTyp aria-expanded="false" role="button" aria-controls=OriWorTyp>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/OriWorTyp.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1002/tht3.202" target="_blank" rel="noopener">doi</a>
 		</p>
-		<div id=tht1 class=collapse>
+		<div id=OriWorTyp class=collapse>
 			<p class="font-monospace small">
 				According to originalism, word types are non-eternal continuants which are individuated by their causal-historical lineage and have a unique possible time of origination.
 				This view collides with the intuition that individual words can be added to the lexicon of a language at different times, and generates other problematic consequences.
