--- a/research/index.html
+++ b/research/index.html
@@ -58,6 +58,18 @@
 		</p>
 		
 		<p>
+			<strong>Meaning change you can make</strong><br>
+			<em>Synthese</em><br>
+			<a data-bs-toggle="collapse" href=#MeaChaMak aria-expanded="false" role="button" aria-controls=MeaChaMak>abstract</a> |
+			in press
+		</p>
+		<div id=MeaChaMak class=collapse>
+			<p class="font-monospace small">
+				Coming soon.
+			</p>
+		</div>
+
+		<p>
 			<strong>Inherent and probabilistic naturalness</strong><br>
 			<em>Philosophical Studies</em><br>
 			<a data-bs-toggle="collapse" href=#InhProNat aria-expanded="false" role="button" aria-controls=InhProNat>abstract</a> |
