--- a/misc/index.html
+++ b/misc/index.html
@@ -69,6 +69,7 @@
 				<li>Idealistic Studies</li>
 				<li>Inquiry: An Interdisciplinary Journal of Philosophy</li>
 				<li>International Journal of Philosophical Studies</li>
+				<li>Journal of Pragmatics</li>
 				<li>Klesis</li>
 				<li>Lexique</li>
 				<li>Mind</li>
