--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="light">
 
 <head>
 
@@ -8,7 +8,7 @@
 	<meta charset=utf-8>
 	<meta name=viewport content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name=description content="Personal website of Luca Gasparri, a researcher at the Centre National de la Recherche Scientifique">
-	<meta name=keywords content="luca gasparri,luca,gasparri,CNRS,STL,philosophy,philosophie,filosofia,language,langage,sprache,linguaggio,mind,esprit,geist,mente,linguistics,
+	<meta name=keywords content="luca gasparri,luca,gasparri,CNRS,STL,lille,philosophy,philosophie,filosofia,language,langage,sprache,linguaggio,mind,esprit,geist,mente,linguistics,
 	linguistique,sprachwissenschaft,linguistik,linguistics,semantics,semantique,semantik,semantica,meaning,sens,bedeutung,significato">
 	<meta name=author content="Luca Gasparri">
 	<meta name=viewport content="width=device-width, initial-scale=1">
@@ -78,18 +78,18 @@
 					of <a href="https://www.fu-berlin.de" target="_blank" rel="noopener">Freie Universit&auml;t Berlin</a>,
 					and a postdoctoral researcher at the <a href="https://www.philosophie.uzh.ch/de.html" target="_blank" rel="noopener">Department of Philosophy</a> of the <a href="https://www.uzh.ch/de.html" target="_blank" rel="noopener">University of Z&uuml;rich</a>,
 					where I was also part of the NCCR <a href="https://evolvinglanguage.ch/" target="_blank" rel="noopener">Evolving Language</a>.
+				</p>
+				<p>
 					Earlier on, I got a PhD in philosophy and cognitive science from <a href="https://www.unisr.it" target="_blank" rel="noopener">San Raffaele University</a> &amp;
 					<a href="https://www.nets.iusspavia.it/about/index.php" target="_blank" rel="noopener">NeTS</a>,
 					and a PhD in philosophy and social science from the <a href="http://www.institutnicod.org" target="_blank" rel="noopener">Institut Jean Nicod</a>.
 					Along the way, I&rsquo;ve been a visiting student at <a href="https://philosophy.mit.edu" target="_blank" rel="noopener">MIT Linguistics and Philosophy</a>,
 					a visiting fellow at <a href="https://gsas.harvard.edu" target="_blank" rel="noopener">Harvard&rsquo;s GSAS</a>,
-					and a visiting fellow at the <a href="https://www.fmsh.fr" target="_blank" rel="noopener">Fondation Maison des Sciences de l&rsquo;Homme</a>,
-					
-					
+					and a visiting fellow at the <a href="https://www.fmsh.fr" target="_blank" rel="noopener">Fondation Maison des Sciences de l&rsquo;Homme</a>.
 				</p>
 				<p>
 					My complete CV and some drafts are available <a href="https://lcgasparri.github.io/contact/">on request</a>.
-					Image: &ldquo;an impossible world&rdquo;, according to <a href="https://en.wikipedia.org/wiki/Stable_Diffusion" target="_blank" rel="noopener">Stable Diffusion 2.1</a>.
+					Image: an impossible world, according to <a href="https://en.wikipedia.org/wiki/Stable_Diffusion" target="_blank" rel="noopener">Stable Diffusion 2.1</a>.
 				</p>
 			</div>
 		</div>
