--- a/misc/index.html
+++ b/misc/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="light">
 
 <head>
 
@@ -110,9 +110,9 @@
 		</p>
 		<p>
 			Native speaker of Italian and of a Western dialect of <a href="https://glottolog.org/resource/languoid/id/lomb1257" target="_blank" rel="noopener">Lombard</a>.<br>
-			Non-native speaker of English, French, and hints of German.<br>
-			Conversant in Latin and Ancient Greek.<br>
-			First-generation university student.
+			Will operate in English, French, and ILR Level 1 (at best) German.<br>
+			Doctor's doses of Latin and Ancient Greek.<br>
+			First-gen university student.
 		</p>
 	</div>
 
