--- a/misc/index.html
+++ b/misc/index.html
@@ -94,8 +94,9 @@
 				<li>Oxford University Press</li>
 			</ul>
 			<ul>
-				<li>Context, Cognition and Communication Conference (<a href="http://ccc-conference.org/" target="_blank" rel="noopener">CCC</a>)</li>
-				<li>Paris Syntax and Semantics Conference (<a href="http://www.cssp.cnrs.fr/index_en.html" target="_blank" rel="noopener">CSSP</a>)</li>
+				<li>Context, Cognition and Communication (<a href="http://ccc-conference.org/" target="_blank" rel="noopener">CCC</a>)</li>
+				<li>Language and Languages at the Crossroad of Disciplines (<a href="https://llcd.cnrs.fr/en/" target="_blank" rel="noopener">LLcD</a>)</li>
+				<li>Paris Syntax and Semantics (<a href="http://www.cssp.cnrs.fr/index_en.html" target="_blank" rel="noopener">CSSP</a>)</li>
 			</ul>
 		</p>
 		<p>
