--- a/research/index.html
+++ b/research/index.html
@@ -61,11 +61,19 @@
 			<strong>Meaning change you can make</strong><br>
 			<em>Synthese</em><br>
 			<a data-bs-toggle="collapse" href=#MeaChaMak aria-expanded="false" role="button" aria-controls=MeaChaMak>abstract</a> |
-			in press
+			<a href="https://lcgasparri.github.io/papers/MeaChaMak.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://doi.org/10.1007/s11229-024-04604-0" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=MeaChaMak class=collapse>
 			<p class="font-monospace small">
-				Coming soon.
+				Standard metasemantic frameworks render word meanings resistant to the control of ordinary speakers, and hinder our ability to exercise sovereignty over the denotations of words.
+				The literature suggests three main responses to the problem: views on which ordinary denotational interventions cannot cause changes to semantic reality,
+				views on which we should drop the metasemantic premises that generate the difficulty, and views on which denotational interventions boil down to operations on a non-recalcitrant region of the semantic spectrum.
+				I review these responses and argue that they face difficulties.
+				Then, I draw on linguistic work on variation to make an alternative proposal.
+				I suggest that part of the problem hinges on a tendency to think about standing meanings under heavily idealized assumptions of intra-linguistic homogeneity.
+				To amend this, we should consider endorsing a localist ontology for semantic properties that allows individual vocabulary items to bear variable standing meanings at different communities of speakers of a public language.
+				The result, I argue, is a middle-ground framework which accepts the difficulties of wide-scope meaning change while granting speakers semantic self-determination, and strikes an attractive balance between a few central desiderata..
 			</p>
 		</div>
 
