--- a/research/index.html
+++ b/research/index.html
@@ -73,7 +73,7 @@
 				Then, I draw on linguistic work on variation to make an alternative proposal.
 				I suggest that part of the problem hinges on a tendency to think about standing meanings under heavily idealized assumptions of intra-linguistic homogeneity.
 				To amend this, we should consider endorsing a localist ontology for semantic properties that allows individual vocabulary items to bear variable standing meanings at different communities of speakers of a public language.
-				The result, I argue, is a middle-ground framework which accepts the difficulties of wide-scope meaning change while granting speakers semantic self-determination, and strikes an attractive balance between a few central desiderata..
+				The result, I argue, is a middle-ground framework which accepts the difficulties of wide-scope meaning change while granting speakers semantic self-determination, and strikes an attractive balance between a few central desiderata.
 			</p>
 		</div>
 
