Correct bad href

--- a/research/index.html
+++ b/research/index.html
@@ -117,7 +117,7 @@
 			<strong>Notions of arbitrariness</strong><br>
 			<em>Mind &amp; Language</em><br>
 			w/ <a href="https://pierafilip.wixsite.com/pierafilippi" target="_blank" rel="noopener">Piera Filippi</a> et al.<br>
-			<a data-bs-toggle="collapse" href=#mila3 aria-expanded="false" role="button" aria-controls=notions-arbitrariness>abstract</a> |
+			<a data-bs-toggle="collapse" href=#notions-arbitrariness aria-expanded="false" role="button" aria-controls=notions-arbitrariness>abstract</a> |
 			<a href="https://lcgasparri.github.io/papers/notions-arbitrariness.pdf" target="_blank" rel="noopener">local</a> |
 			<a href="https://doi.org/10.1111/mila.12443" target="_blank" rel="noopener">doi</a>
 		</p>
