Remove text deco

--- a/contact/index.html
+++ b/contact/index.html
@@ -82,9 +82,9 @@
 	<!-- Footer -->
 	<div class="container-fluid border-top pt-3 fw-light">
 		<p class="small text-center">
-			<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener" class="text-decoration-none">CC BY-NC-ND 4.0</a> &middot;
-			<a href="https://github.com/lcgasparri/lcgasparri.github.io" target="_blank" rel="noopener" class="text-decoration-none">Code</a> &middot;
-			<a href="https://getbootstrap.com/" target="_blank" rel="noopener" class="text-decoration-none">Bootstrap 5</a>
+			<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener">CC BY-NC-ND 4.0</a> &middot;
+			<a href="https://github.com/lcgasparri/lcgasparri.github.io" target="_blank" rel="noopener">Code</a> &middot;
+			<a href="https://getbootstrap.com/" target="_blank" rel="noopener">Bootstrap 5</a>
 		</p>
 	</div>
 
