--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
 
 	<!-- Header -->
-	<nav class="navbar navbar-expand-sm border-bottom fw-light">
-		<div class="container">
+	<nav class="navbar navbar-expand-sm">
+		<div class="container pb-2 border-bottom">
 			<a class="navbar-brand fs-4">Luca Gasparri</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
 	</nav>
 
 	<!-- Title -->
-	<div class="container pt-4 fw-light">
+	<div class="container pt-4">
 		<h1 class="text-center display-3">
 			home
 		</h1>
@@ -57,7 +57,7 @@
 
 
 	<!-- Home -->
-	<div class="container pt-3 pb-4 fw-light">
+	<div class="container pt-3 pb-4">
 		<div class="row justify-content-center">
 			<div class="col-xl-3 col-lg-4 col-md-5 col-6">
 				<img src="images/iw.jpeg" class="img-fluid mt-1 mb-4 rounded-circle img-thumbnail" alt="Pic">
@@ -76,7 +76,7 @@
 					Before joining the CNRS, I&rsquo;ve been an <a href="https://www.humboldt-foundation.de/en/" target="_blank" rel="noopener">Alexander von Humboldt</a> fellow at the
 					<a href="https://www.geisteswissenschaften.fu-berlin.de/we01/index.html" target="_blank" rel="noopener">Institute of Philosophy</a>
 					of <a href="https://www.fu-berlin.de" target="_blank" rel="noopener">Freie Universit&auml;t Berlin</a>,
-					and a postdoctoral researcher at the <a href="https://www.philosophie.uzh.ch/de.html" target="_blank" rel="noopener">Department of Philosophy</a> of the <a href="https://www.uzh.ch/de.html" target="_blank" rel="noopener">University of Z&uuml;rich</a>,
+					and a postdoc at the <a href="https://www.philosophie.uzh.ch/de.html" target="_blank" rel="noopener">Department of Philosophy</a> of the <a href="https://www.uzh.ch/de.html" target="_blank" rel="noopener">University of Z&uuml;rich</a>,
 					where I was also part of the NCCR <a href="https://evolvinglanguage.ch/" target="_blank" rel="noopener">Evolving Language</a>.
 				</p>
 				<p>
@@ -96,7 +96,7 @@
 	</div>
 
 	<!-- Footer -->
-	<div class="container-fluid border-top pt-3 fw-light">
+	<div class="container border-top pt-3">
 		<p class="small text-center">
 			<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener">CC BY-NC-ND 4.0</a> &middot;
 			<a href="https://github.com/lcgasparri/lcgasparri.github.io" target="_blank" rel="noopener">Code</a> &middot;
