--- a/contact/index.html
+++ b/contact/index.html
@@ -19,8 +19,8 @@
 <body>
 
 	<!-- Header -->
-	<nav class="navbar navbar-expand-sm border-bottom fw-light">
-		<div class="container">
+	<nav class="navbar navbar-expand-sm">
+		<div class="container pb-2 border-bottom">
 			<a class="navbar-brand fs-4">Luca Gasparri</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -45,14 +45,14 @@
 	</nav>
 
 	<!-- Title -->
-	<div class="container pt-4 fw-light">
+	<div class="container pt-4">
 		<h1 class="text-center display-3">
 			contact
 		</h1>
 	</div>
 
 	<!-- Contact -->
-	<div class="container pt-3 pb-4 fw-light">
+	<div class="container pt-3 pb-4">
 		<p class="pb-2 lead">
 			Feel free to reach out.
 		</p>
@@ -72,7 +72,7 @@
 		<p>
 			Find me on <a href="https://philpeople.org/profiles/luca-gasparri/" target="_blank" rel="noopener">PhilPeople</a> and <a href="https://orcid.org/0000-0002-0270-9262" target="_blank" rel="noopener">OrcID</a>.
 		</p>
-		<div class="col-12 col-md-9 col-lg-8 col-xl-7 col-xxl-6 pt-3">
+		<div class="col-12 col-md-9 col-lg-8 col-xl-7 col-xxl-6 pt-3 pb-3">
 			<div class="ratio ratio-16x9">
 				<iframe src="https://www.openstreetmap.org/export/embed.html?bbox=3.122012047679164%2C50.62674726569862%2C3.134768633753993%2C50.63096682649396&amp;layer=mapnik&amp;marker=50.6288570934341%2C3.128390340716578" class="border border-primary rounded-3"></iframe>
 			</div>
@@ -80,7 +80,7 @@
 	</div>
 
 	<!-- Footer -->
-	<div class="container-fluid border-top pt-3 fw-light">
+	<div class="container border-top pt-3">
 		<p class="small text-center">
 			<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener">CC BY-NC-ND 4.0</a> &middot;
 			<a href="https://github.com/lcgasparri/lcgasparri.github.io" target="_blank" rel="noopener">Code</a> &middot;
