--- a/research/index.html
+++ b/research/index.html
@@ -19,8 +19,8 @@
 <body>
 
 	<!-- Header -->
-	<nav class="navbar navbar-expand-sm border-bottom fw-light">
-		<div class="container">
+	<nav class="navbar navbar-expand-sm fw-light">
+		<div class="container pb-2 border-bottom">
 			<a class="navbar-brand fs-4">Luca Gasparri</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -383,7 +383,7 @@
 	</div>
 
 	<!-- Footer -->
-	<div class="container-fluid border-top pt-3 fw-light">
+	<div class="container border-top pt-3 fw-light">
 		<p class="small text-center">
 			<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener">CC BY-NC-ND 4.0</a> &middot;
 			<a href="https://github.com/lcgasparri/lcgasparri.github.io" target="_blank" rel="noopener">Code</a> &middot;
