--- a/contact/index.html
+++ b/contact/index.html
@@ -21,7 +21,7 @@
 	<!-- Header -->
 	<nav class="navbar navbar-expand-sm">
 		<div class="container pb-2 border-bottom">
-			<a class="navbar-brand fs-4">Luca Gasparri</a>
+			<a class="navbar-brand">Luca Gasparri</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
