--- a/misc/index.html
+++ b/misc/index.html
@@ -19,9 +19,9 @@
 <body>
 
 	<!-- Header -->
-	<nav class="navbar navbar-expand-sm fw-light">
+	<nav class="navbar navbar-expand-sm">
 		<div class="container pb-2 border-bottom">
-			<a class="navbar-brand fs-4">Luca Gasparri</a>
+			<a class="navbar-brand">Luca Gasparri</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -45,14 +45,14 @@
 	</nav>
 
 	<!-- Title -->
-	<div class="container pt-4 fw-light">
+	<div class="container pt-4">
 		<h1 class="text-center display-3">
 			misc
 		</h1>
 	</div>
 
 	<!-- Misc -->
-	<div class="container pt-3 pb-4 fw-light">
+	<div class="container pt-3 pb-4">
 		<p class="pb-2 lead">
 			Service, membership, et alia.
 		</p>
@@ -118,7 +118,7 @@
 	</div>
 
 	<!-- Footer -->
-	<div class="container border-top pt-3 fw-light">
+	<div class="container border-top pt-3">
 		<p class="small text-center">
 			<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener">CC BY-NC-ND 4.0</a> &middot;
 			<a href="https://github.com/lcgasparri/lcgasparri.github.io" target="_blank" rel="noopener">Code</a> &middot;
