--- a/misc/index.html
+++ b/misc/index.html
@@ -61,6 +61,7 @@
 			<ul>
 				<li>Acta Analytica</li>
 				<li>Analysis</li>
+				<li>Biological Reviews</li>
 				<li>Dialectica</li>
 				<li>Erkenntnis</li>
 				<li>European Journal for Philosophy of Religion</li>
