New paper in press

--- a/research/index.html
+++ b/research/index.html
@@ -58,6 +58,18 @@
 		</p>
 		
 		<p>
+			<strong>Bare singular names and genericity</strong><br>
+			<em>Journal of Semantics</em><br>
+			<a data-bs-toggle="collapse" href=#bare-names-generics aria-expanded="false" role="button" aria-controls=bare-names-generics>abstract</a> |
+			in press
+		</p>
+		<div id=bare-names-generics class=collapse>
+			<p class="font-monospace small">
+				Coming soon.
+			</p>
+		</div>
+
+		<p>
 			<strong>Meaning change you can make</strong><br>
 			<em>Synthese</em><br>
 			<a data-bs-toggle="collapse" href=#meaning-change aria-expanded="false" role="button" aria-controls=meaning-change>abstract</a> |
