--- a/misc/index.html
+++ b/misc/index.html
@@ -83,6 +83,7 @@
 				<li>Philosophy</li>
 				<li>Philosophy and Phenomenological Research</li>
 				<li>Philosophy East and West</li>
+				<li>Philosophy of Science</li>
 				<li>Potsdam Linguistic Investigations</li>
 				<li>Review of Philosophy and Psychology</li>
 				<li>Sistemi Intelligenti</li>
@@ -111,9 +112,9 @@
 			</ul>
 		</p>
 		<p>
-			Native speaker of Italian and of a Western dialect of <a href="https://glottolog.org/resource/languoid/id/lomb1257" target="_blank" rel="noopener">Lombard</a>.<br>
-			Will operate in English, French, and ILR Level 1 (at best) German.<br>
-			Doctor's doses of Latin and Ancient Greek.<br>
+			Native speaker of Italian and of a dialect of <a href="https://glottolog.org/resource/languoid/id/lomb1257" target="_blank" rel="noopener">Lombard</a>.<br>
+			English, French, and ILR Level 1 (at best) German.<br>
+			Latin and Ancient Greek.<br>
 			First-gen university student.
 		</p>
 	</div>
