--- a/research/index.html
+++ b/research/index.html
@@ -61,11 +61,16 @@
 			<strong>Bare singular names and genericity</strong><br>
 			<em>Journal of Semantics</em><br>
 			<a data-bs-toggle="collapse" href=#bare-names-generics aria-expanded="false" role="button" aria-controls=bare-names-generics>abstract</a> |
-			in press
+			<a href="https://lcgasparri.github.io/papers/bare-names-generics.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://doi.org/10.1093/jos/ffae017" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=bare-names-generics class=collapse>
 			<p class="font-monospace small">
-				Coming soon.
+				Predicativists hold that proper names are count nouns with a predicative meaning, and treat bare singular names as predicative DPs headed by an unpronounced definite.
+				However, bare singular names exhibit differences in grammatical behavior from ordinary definite singulars.
+				One difference, it has been argued, is that while ordinary definite singulars can be interpreted generically, bare singular names cannot.
+				This is not right: bare singular names can have generic uses.
+				I present the evidence and offer an argument that generics with bare singular names are good news for predicativists.
 			</p>
 		</div>
 
