--- a/research/index.html
+++ b/research/index.html
@@ -54,7 +54,7 @@
 	<!-- Research -->
 	<div class="container pt-3 pb-4">
 		<p class="pb-2 lead">
-			Some of the things I&rsquo;ve written.
+			Some things I&rsquo;ve written.
 		</p>
 		
 		<p>
