--- a/misc/index.html
+++ b/misc/index.html
@@ -85,6 +85,7 @@
 				<li>Philosophy East and West</li>
 				<li>Philosophy of Science</li>
 				<li>Potsdam Linguistic Investigations</li>
+				<li>Religious Studies</li>
 				<li>Review of Philosophy and Psychology</li>
 				<li>Sistemi Intelligenti</li>
 				<li>Synthese</li>
