--- a/misc/index.html
+++ b/misc/index.html
@@ -100,6 +100,7 @@
 				<li>Context, Cognition and Communication (<a href="http://ccc-conference.org/" target="_blank" rel="noopener">CCC</a>)</li>
 				<li>Language and Languages at the Crossroad of Disciplines (<a href="https://llcd.cnrs.fr/en/" target="_blank" rel="noopener">LLcD</a>)</li>
 				<li>Paris Syntax and Semantics (<a href="http://www.cssp.cnrs.fr/index_en.html" target="_blank" rel="noopener">CSSP</a>)</li>
+				<li>Congress of the <a href="https://sophaphilo.org/" target="_blank" rel="noopener">SoPhA</a></li>
 			</ul>
 		</p>
 		<p>
